# svSuperEstimator

./: .buildinfo  .flake8  .gitignore  0d_3d_comparison.py  0d_3d_tuning.py  LICENSE.md  README.md  app.py  compare_0d_3d.py  compare_0d_3d_visualize.py  config.yaml  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  svsuperestimator.html  svsuperestimator.reader.html  svsuperestimator.tasks.html  svsuperestimator.visualizer.html  zerod_to_geom.py
.github/workflows/: codechecks.yml  documentation.yml  github-actions-demo.yml  test.yml
_modules/: index.html
_modules/svsuperestimator/: main.html  tasks.html
_modules/svsuperestimator/reader/: _centerline_handler.html  _mesh_handler.html  _svproject.html  _svsolver_inflow_handler.html  _svsolver_input_handler.html  _svsolver_rcr_handler.html  _svzerodsolver_input_handler.html  _vtk_handler.html  utils.html
_modules/svsuperestimator/tasks/: map_three_d_result_on_centerline.html  plotutils.html  statutils.html  task.html  taskutils.html  three_d_simulation.html
_modules/svsuperestimator/visualizer/: _plot_2d.html  _plot_3d.html  _report.html
_sources/: index.rst.txt  svsuperestimator.reader.rst.txt  svsuperestimator.rst.txt  svsuperestimator.tasks.rst.txt  svsuperestimator.visualizer.rst.txt
_static/: documentation_options.js
assets/: stylesheet.css
cases/: bc_optim_noise.py  minimal_inverse_problem_0d.py  minimal_inverse_problem_0d_noise.py  objective_function.py  queens_grid_visualizer.py  queens_smc_chopin.py  queens_smc_chopin_visualizer.py
doc/source/: conf.py  index.rst  modules.rst
doc/source/rst/: example.rst
examples/: grid_sampling.yaml  model_calibration.yaml  multi_fidelity_slurm.yaml  multi_fidelity_tuning.yaml  sequential_monte_carlo.yaml  three_d_simulation.yaml  windkessel_tuning.yaml  wk_tune_0104_0001_grid.yaml
rst/: bibliography.html  installation.html
scripts/: batch_bloodvessel_collect.py  batch_bloodvessel_tuning.py  collect_data.py  compare_0d_3d.py  compare_0d_3d_visualize.py  dowload_models.py  merge_data.py  run_all.py
svsuperestimator/: __init__.py  main.py
svsuperestimator/app/: app.py  helpers.py
svsuperestimator/app/assets/: stylesheet.css
svsuperestimator/forward_models/: __init__.py  _bivariant_windkessel_distal_proximal_ratio.py  _forward_model.py  _windkessel_distal_proximal_ratio.py
svsuperestimator/io/: __init__.py  _plot.py  _svproject.py  _webpage.py  stylesheet.css  sv_file_registry.yaml
svsuperestimator/iterators/: __init__.py  _grid_iterator.py  _grid_likelihood_iterator.py  _iterator.py  _optimization_iterator.py  _queens_iterator.py  _smc_iterator.py
svsuperestimator/model/: __init__.py  _multifidelitymodel.py  _threedmodel.py  _zerodmodel.py
svsuperestimator/problems/: __init__.py  _bivariant_windkessel_grid_likelihood.py  _bivariant_windkessel_smc_chopin.py  _plotutils.py  _problem.py  _windkessel_smc_chopin.py  plotutils.py  statutils.py  windkessel_smc_chopin.py
svsuperestimator/reader/: __init__.py  _centerline_handler.py  _data_handler.py  _mesh_handler.py  _plain_handler.py  _svproject.py  _svsolver_inflow_handler.py  _svsolver_input_handler.py  _svsolver_rcr_handler.py  _svzerodsolver_input_handler.py  _vtk_handler.py  centerline.py  sv_file_registry.yaml  utils.py
svsuperestimator/solver/: __init__.py  _threedsolver.py  _zerodsolver.py
svsuperestimator/tasks/: __init__.py  blood_vessel_tuning.py  grid_sampling.py  map_three_d_result_on_centerline.py  map_zero_d_result_to_three_d.py  map_zero_to_three.py  model_calibration.py  model_calibration_least_squares.py  multi_fidelity_tuning.py  plotutils.py  statutils.py  task.py  taskutils.py  three_d_simulation.py  three_d_simulation_from_zero_d_config.py  utils.py  windkessel_tuning.py
svsuperestimator/visualizer/: __init__.py  _plot.py  _plot_2d.py  _plot_3d.py  _plot_base.py  _report.py  helpers.py  utils.py
tests/: __init__.py  test_dummy.py
