[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=21.3"]
build-backend = "setuptools.build_meta"

[project]
name = "svsuperestimator"
description = "A framework for multi-fidelity estimation of boundary condition parameters for cardiovascular fluid dynamics simulations."
keywords = ["parameter estimation", "simulation", "cfd"]
dependencies = [
    "numpy",
    "scipy",
    "vtk",
    "plotly",
    "pandas",
    "pyyaml",
    "orjson", # Faster than json
    "click", # Easy to use argument parser
    "rich",
    "particles"
]
dynamic = ["version", "readme"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["svsuperestimator"]

[tool.setuptools.dynamic]
version = {attr = "svsuperestimator.VERSION"}
readme = {file = ["README.md"]}

[project.optional-dependencies]
dev = [
    "pytest>=3.8.0",
    "pytest-cov>=2.3.1",
    "pytest-mock",
    "flake8",
    "flake8-docstrings",
    "black",
    "sphinx",
    "sphinx-autodoc-typehints",
    "m2r2",
    "pydata-sphinx-theme",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "isort",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
estimate = "svsuperestimator.main:estimate"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["."]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "doc|tests|cases"

[tool.pytest.ini_options]
addopts = """
    --cov-report=html:doc/cov
    --cov-report=term
    --cov=svsuperestimator
    --verbose
"""
