[metadata]
name = svsuperestimator
version = 1.0
description = A framework for multi-fidelity estimation of boundary condition parameters for cardiovascular fluid dynamics simulations. 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    svzerodsolver @ git+https://github.com/SimVascular/svZeroDSolver.git@master

[options.extras_require]
dev = 
    pytest>=3.8.0
    pytest-cov>=2.3.1
    pytest-mock
    flake8
    flake8-docstrings
    black
    sphinx
    sphinx-autodoc-typehints
    m2r2
    sphinx-press-theme
    sphinxcontrib-bibtex
    sphinxcontrib-mermaid
    isort
    mypy
    types-PyYAML

[options.entry_points]
console_scripts =
    estimator = TODO

[flake8]
ignore = D202 E203 W503
max-line-length = 79
docstring-convention = google